<resources>
    <string name="app_name">Smart Home</string>
    <string name="textViewBulb1">Bulb1 State</string>
    <string name="textViewBulb2">Bulb2 State</string>
    <string name="textViewFan">Fan State</string>
    <string name="tb_ON">ON</string>
    <string name="tb_OFF">OFF</string>
    <string name="textViewT">0 C</string>
    <string name="textViewH">0 %</string>
    <string name="textViewM">NO</string>
    <string name="textViewG">NO</string>

    <string name="textViewTemperature">Temperature</string>
    <string name="textViewHumidity">Humidity</string>
    <string name="textViewPirMotion">Motion</string>
    <string name="textViewPirGas">Gas Leak</string>


    <string name="btnSettings">Settings</string>

    <string name="publish">Publish</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">UnSubscribe</string>
    <string name="enter_message">Enter message</string>
    <string name="subscribe_topic">Subscribe topic</string>
    <string name="unsubscribe_topic">Unsubscribe topic</string>
    <string name="btnBack">Back</string>

    <string name="togglebutton">ToggleButton</string>
    <string name="togglebutton2">ToggleButton</string>
    <string name="togglebutton3">ToggleButton</string>

</resources>
